fix: z-index in card, card:hover and header-nav

--- a/src/components/product-card/product-card.scss
+++ b/src/components/product-card/product-card.scss
@@ -3,7 +3,7 @@
   height: 40rem;
 
   position: relative;
-  z-index: 0;
+  z-index: 12;
   margin: 0rem -0.1rem -0.1rem 0rem; // убираем double border у соседних карточек (border = 0.1rem)
   padding: 1rem 1.5rem 2rem;
 
@@ -92,7 +92,7 @@
 
   @media screen and (hover: hover) {
     &:hover {
-      z-index: 9;
+      z-index: 13;
 
       transform: scale(1.1);
       box-shadow: 0 0 5rem rgba(0, 0, 0, 0.3);
